# coreason-identity

./: .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY_AUDIT.md  THE_ARCHITECTURE_AND_UTILITY_OF_COREASON_IDENTITY.md  mkdocs.yml  pyproject.toml  requirements.txt  test_sni.py
.github/workflows/: ci-cd.yml  ci.yml
docs/: identity_passport.md  index.md  integration_guides.md  product_requirements.md
examples/: async_oidc_discovery.py
tests/: conftest.py  test_async_context.py  test_basic.py  test_complex_cases.py  test_complex_workflows.py  test_config.py  test_config_edge_cases.py  test_config_segregation_complex.py  test_config_segregation_edge_cases.py  test_config_validation.py  test_coverage_gap_fill.py  test_coverage_gap_fill_identity_mapper.py  test_device_flow_client.py  test_device_flow_client_complex.py  test_device_flow_client_coverage.py  test_device_flow_client_dos.py  test_device_flow_client_edge_cases.py  test_device_flow_client_slow_down.py  test_dos_protection.py  test_exceptions.py  test_explicit_scope_edge_cases.py  test_final_edge_cases.py  test_final_verification.py  test_fix_verification.py  test_identity_mapper.py  test_identity_mapper_complex.py  test_identity_mapper_coverage.py  test_identity_mapper_edge_cases.py  test_identity_mapper_edge_cases_v2.py  test_immutability_complex.py  test_issuer_trust.py  test_issuer_trust_complex.py  test_issuer_trust_extended.py  test_local_dev_complex.py  test_logger_complex.py  test_logger_edge_cases.py  test_logger_security.py  test_logging_enterprise.py  test_main.py  test_manager.py  (+46 more)
(+34 files in other folders)
