[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreason-identity"
version = "0.1.0"
description = "Active Zero-Trust Identity Middleware for the Coreason Ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Prosperity Public License 3.0.0" }
dependencies = [
    "coreason-manifest>=0.26.0",
    "pydantic>=2.9.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "respx>=0.21.0",
]

[tool.uv.sources]
# Temporarily resolve from local disk during greenfield development
coreason-manifest = { path = "../coreason-manifest", editable = true }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"